# devtools-frontend-unifyapps

./: .gitignore  package-lock.json  package.json
.github/workflows/: build.yml
config/gni/: devtools_grd_files.gni
front_end/: BUILD.gn  entrypoint_template.html
front_end/Images/: BUILD.gn
front_end/core/dom_extension/: DOMExtension.ts
front_end/core/host/: InspectorFrontendHost.ts
front_end/core/i18n/locales/: BUILD.gn
front_end/core/protocol_client/: InspectorBackend.ts
front_end/core/root/: Runtime.ts
front_end/core/sdk/: Connections.ts  NetworkRequest.ts  Target.ts
front_end/entrypoints/chii_app/: BUILD.gn  chii_app.ts  global.ts  main.ts  rollup.config.js
front_end/entrypoints/inspector_main/: BUILD.gn
front_end/entrypoints/main/: BUILD.gn  MainImpl.ts  main-meta.ts
front_end/panels/application/: ApplicationPanelSidebar.ts  StorageView.ts
front_end/panels/console/: ConsolePrompt.ts  ConsoleView.ts  console-meta.ts  consoleView.css
front_end/panels/console_counters/: console_counters-meta.ts
front_end/panels/elements/: ElementsTreeElement.ts
front_end/panels/elements/components/: layoutPane.css
front_end/panels/network/: NetworkDataGridNode.ts  NetworkItemView.ts  NetworkLogView.ts  NetworkPanel.ts  network-meta.ts  networkLogView.css  networkPanel.css  requestPayloadTree.css
front_end/panels/network/components/: RequestHeadersView.css
front_end/panels/screencast/: ScreencastApp.ts
front_end/panels/sources/: SourcesPanel.ts  WatchExpressionsSidebarPane.ts  sources-meta.ts
front_end/panels/state/: BUILD.gn  state-meta.ts  state.css  state.ts
front_end/ui/legacy/: DockController.ts  applicationColorTokens.css  closeButton.css  filter.css  inspectorCommon.css  tabbedPane.css  toolbar.css
front_end/ui/legacy/components/data_grid/: dataGrid.css
scripts/javascript_natives/: package-lock.json  package.json
scripts/webpack/: chii_app.webpack.config.js
