# Copyright 2021 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
import("../visibility.gni")

devtools_module("chii_app") {
  sources = [ "global.ts", "main.ts" ]
}

devtools_entrypoint("entrypoint") {
  entrypoint = "chii_app.ts"

  deps = [
    ":chii_app",
    "../../Images:optimize_images",
    "../../core/dom_extension:bundle",
    "../../core/sdk:meta",
    "../../entrypoints/main:meta",
    "../../models/logs:meta",
    "../../models/persistence:meta",
    "../../panels/application:meta",
    "../../panels/console:meta",
    "../../panels/console_counters:meta",
    "../../panels/protocol_monitor:meta",
    "../../panels/settings:meta",
    "../../panels/sources:meta",
    "../../panels/screencast:meta",
    "../../ui/legacy/components/object_ui:meta",
    "../../ui/legacy/components/perf_ui:meta",
    "../../ui/legacy/components/quick_open:meta",
    "../../ui/legacy/components/source_frame:meta",
    "../../entrypoints/inspector_main:meta",
    "../../panels/accessibility:meta",
    "../../panels/application:meta",
    "../../panels/browser_debugger:meta",
    "../../panels/developer_resources:meta",
    "../../panels/elements:meta",
    "../../panels/emulation:meta",
    "../../panels/issues:meta",
    "../../panels/layer_viewer:meta",
    "../../panels/mobile_throttling:meta",
    "../../panels/network:meta",
    "../../panels/sensors:meta",
  ]

  visibility = [
    "../../:*",
    "../../legacy_test_runner:*",
    "../inspector:*",
  ]

  visibility += devtools_entrypoints_visibility
}
