# Copyright 2021 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
import("../visibility.gni")

devtools_module("chii_app") {
  sources = [ "global.ts", "main.ts" ]
}

devtools_entrypoint("entrypoint") {
  entrypoint = "chii_app.ts"

  deps = [
    ":chii_app",
    "../../Images:optimize_images",
    "../../core/platform:bundle",
    "../../core/dom_extension:bundle",
    "../../core/sdk:meta",
    "../../core/root:bundle",
    "../../entrypoints/main:meta",
    "../../entrypoints/main:bundle",
    "../../entrypoints/inspector_main:meta",
    "../../models/logs:meta",
    "../../models/persistence:meta",
    "../../panels/accessibility:meta",
    "../../panels/browser_debugger:meta",
    "../../panels/console:meta",
    "../../panels/console_counters:meta",
    "../../panels/developer_resources:meta",
    "../../panels/emulation:meta",
    "../../panels/issues:meta",
    "../../panels/layer_viewer:meta",
    "../../panels/mobile_throttling:meta",
    "../../panels/network:meta",
    "../../panels/protocol_monitor:meta",
    "../../panels/sensors:meta",
    "../../panels/settings:meta",
    "../../panels/sources:meta",
    "../../panels/state:meta",
    "../../ui/legacy/components/object_ui:meta",
    "../../ui/legacy/components/perf_ui:meta",
    "../../ui/legacy/components/quick_open:meta",
    "../../ui/legacy/components/source_frame:meta",
  ]

  visibility = [
    ":*",
    "../../:*",
    "../../legacy_test_runner:*",
    "../inspector:*",
  ]

  visibility += devtools_entrypoints_visibility
}

node_action("bundled_library") {
  script = "node_modules/rollup/dist/bin/rollup"

  _bundled_entrypoint = target_gen_dir + "/chii_app.js"
  _output_file_location = target_gen_dir + "/chii_app.generated.js"

  inputs = [
    _bundled_entrypoint,
    "rollup.config.js",
  ]

  deps = [ ":entrypoint" ]

  args = [
    "--silent",
    "--config",
    rebase_path("rollup.config.js", root_build_dir),
    "--input",
    rebase_path(_bundled_entrypoint, root_build_dir),
    "--file",
    rebase_path(_output_file_location, root_build_dir),
  ]

  if (is_debug) {
    args += [ "--environment DEBUG_CHII_APP" ]
  }

  outputs = [ _output_file_location ]
  metadata = {
    grd_files = [ _output_file_location ]
  }
}
