# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
import("../../../scripts/build/ninja/generate_css.gni")
import("../visibility.gni")

generate_css("css_files") {
  sources = [
    "state.css",
  ]
}


devtools_entrypoint("bundle") {
  entrypoint = "state.ts"

  deps = [
     ":css_files",
    "../../ui/visual_logging:bundle",
    "../../ui/legacy:bundle",
    "../../ui/legacy/components/utils:bundle",
  ]

  visibility = [
    ":*",
    "../../../test/unittests/front_end/entrypoints/missing_entrypoints/*",
    "../../../test/unittests/front_end/panels/sources/*",
    "../../entrypoints/*",
    "../../panels/explain/*",
    "../../panels/network/*",

    # TODO(crbug.com/1202788): Remove invalid dependents
    "../browser_debugger/*",
  ]

  visibility += devtools_panels_visibility
}

devtools_entrypoint("meta") {
  entrypoint = "state-meta.ts"

  deps = [
    ":bundle",
    "../../core/i18n:bundle",
    "../../core/sdk:bundle",
  ]

  visibility = [ "../../entrypoints/*" ]
}
